# os-emulator

./: .gitignore  CMakeLists.txt  README.md  config.txt
include/: CPUCore.hpp  CommandParser.hpp  Config.hpp  Emulator.hpp  MemoryManager.hpp  Process.hpp  Utils.hpp
include/instructions/: Add.hpp  Arithmetic.hpp  Declare.hpp  For.hpp  IInstruction.hpp  InstructionFactory.hpp  Print.hpp  Read.hpp  Sleep.hpp  Write.hpp
include/schedulers/: FCFSSCheduler.hpp  IScheduler.hpp  RRScheduler.hpp  SchedulerFactory.hpp
src/: CPUCore.cpp  CommandParser.cpp  Config.cpp  Emulator.cpp  MemoryManager.cpp  Process.cpp  Utils.cpp  main.cpp
src/instructions/: Add.cpp  Arithmetic.cpp  Declare.cpp  For.cpp  InstructionFactory.cpp  Print.cpp  Read.cpp  Sleep.cpp  Write.cpp
src/schedulers/: FCFSSCheduler.cpp  FCFSScheduler.cpp  RRScheduler.cpp  SchedulerFactory.cpp
